--- a/Views/InvTxSummary/Index.cshtml
+++ b/Views/InvTxSummary/Index.cshtml
@@ -5,36 +5,35 @@
     ViewData["Title"] = "InvTxSummary";
 }
 
-<div class="text-center">
-    <h2 class="display-4">Adjustment Summary</h2>
-</div>
+  <div class="text-center">
+    <h4 class="display-5">Adjustment Summary</h4>
+  </div>
 <fieldset class="scheduler-border">
 <div class="container-flow">
-<div class="row">
-           <div class="col-sm-3">
+  <div class="row p-2">
+</div>
+      <div class="row p-1">
+           <div class="col-lg-3">
                 <label for="startDate"  style="font-size:10px;"> Start Date Range:</label>
-                <input type="date" value=""  style="font-size:10px;" id='startDate' name="startDate" />
-           </div>   
-           <div class="col-sm-1"></div>
-           <div class="col-sm-3">
+                <input type="date" value="" style="font-size:10px;" id='startDate' name="startDate" />
+           </div> 
+           <div class="col-lg-3">
                 <label for="endDate"  style="font-size:10px;"> End Date Range:</label>
                 <input type="date" value=""  style="font-size:10px;" id='endDate' name="endDate" />
             </div>
-            <div class="col-md-1 "></div>
-            <div class="col-sm-2">
+            <div class="col-lg-2">
               <form class="form-inline">
                  <div class="form-group">
-                   <label style="font-size:10px;" for="InvTxSummaryDropdown" class="d-inline">Transaction Type:</label>  
                    <select style="font-size:10px;" class="form-control" id="InvTxSummaryDropdown" name="InvTxSummaryDropdown"></select> 
                  </div>
               </form>  
            </div>
-                <div class="col-sm-1">
+                <div class="col-lg-3">
                  </div>
-            <div class="col-sm-1 text-right">
+            <div class="col-lg-1 text-right">
                  <button class="btn btn-outline-secondary" style="font-size:10px;" id="search" type="button">Search</button>  
             </div>        
-</div>
+      </div>
 </div>
 </fieldset>
 
