--- a/Views/InvTxSummary/Index.cshtml
+++ b/Views/InvTxSummary/Index.cshtml
@@ -9,16 +9,15 @@
     <h4 class="display-5">Adjustment Summary</h4>
   </div>
 <fieldset class="scheduler-border">
-<div class="container-flow">
-  <div class="row p-2">
-</div>
+ <div class="container-flow">
+  
       <div class="row p-1">
-           <div class="col-lg-3">
-                <label for="startDate"  style="font-size:10px;"> Start Date Range:</label>
+           <div class="col-lg-3  form-group">
+                <label for="startDate"  style="font-size:8px;"> Start Date Range:</label>
                 <input type="date" value="" style="font-size:10px;" id='startDate' name="startDate" />
            </div> 
-           <div class="col-lg-3">
-                <label for="endDate"  style="font-size:10px;"> End Date Range:</label>
+           <div class="col-lg-3  form-group">
+                <label for="endDate"  style="font-size:8px;"> End Date Range:</label>
                 <input type="date" value=""  style="font-size:10px;" id='endDate' name="endDate" />
             </div>
             <div class="col-lg-2">
@@ -34,7 +33,7 @@
                  <button class="btn btn-outline-secondary" style="font-size:10px;" id="search" type="button">Search</button>  
             </div>        
       </div>
-</div>
+ </div>
 </fieldset>
 
 <table id="invTxSummary" style="align: center"></table>
