--- a/Views/SaExciseDuty/Index.cshtml
+++ b/Views/SaExciseDuty/Index.cshtml
@@ -6,36 +6,28 @@
 }
 
 <div class="text-center">
-    <h1 class="display-4">Excise Duty Paid</h1>
+    <h4 class="display-5">Excise Duty Paid</h4>
 </div>
 <fieldset class="scheduler-border"  style="max-height: 18rem;">
     <div class="container-flow">
-        <div class="row">
-            <div class="col-sm-3">
-                <label style="font-size:10px;" for="date">Transaction Date:</label>
+        <div class="row p-1">
+            <div class="col-lg-3  form-group">
+                <label style="font-size:8px;" for="date">Transaction Date:</label>
                 <input style="font-size:10px;" type="date" id="date" name="date">
             </div>
-        </div>
-        <div class="row">
-            <div class="col-sm-3">
-                <form class="form-inline">
-                    <div class="form-group">
-                        <label style="font-size:10px;" for="locationsDropdown" class="d-inline">Locations:</label>  
-                        <select style="font-size:10px;" class="form-control" id="locationsDropdown" name="locationsDropdown"></select> 
-                    </div>
-                 </form>
+            <div class="col-lg-2 form-group">
+                 <select style="font-size:10px;" class="form-control" id="locationsDropdown" name="locationsDropdown"></select> 
             </div>
-            <div class="col-sm-1"></div>
-            <div class="col-sm-2">
+        </div>
+        <div class="row p-1">
+            <div class="col-lg-5  form-group">
+                <input style="font-size:10px;" type="text" class="form-control" placeholder="Notes:" aria-label="Notes:" aria-describedby="basic-addon2" id="comments"/>
+            </div>
+            <div class="col-lg-4"></div>
+            <div class="col-lg-2">
                 <input style="font-size:10px; border-radius: 0 !important" type="text" class="form-control" placeholder="SA Code:" aria-label="SA Code:" aria-describedby="basic-addon2" id="saCode" readonly/>
             </div>
-        </div>
-        <div class="row">
-            <div class="col-sm-6">
-                <input style="font-size:10px; border-radius: 0 !important" type="text" class="form-control" placeholder="Notes:" aria-label="Notes:" aria-describedby="basic-addon2" id="comments"/>
-            </div>
-            <div class="col-sm-1"></div>
-            <div class="col-sm-3">
+            <div class="col-lg-1 text-right">
                 <button class="btn btn-outline-secondary" style="font-size:10px;" id="save" type="button">Save</button>  
             </div>
         </div>
