--- a/Views/SaInternalTransfer/Index.cshtml
+++ b/Views/SaInternalTransfer/Index.cshtml
@@ -6,45 +6,34 @@
 }
 
 <div class="text-center">
-    <h1 class="display-4">Internal Transfer</h1>
+    <h4 class="display-5">Internal Transfer</h4>
 </div>
 <fieldset class="scheduler-border"  style="max-height: 18rem;">
 <div class="container-flow">
-    <div class="row">
-        <div class="col-sm-3">
-            <label style="font-size:10px;" for="date">Transaction Date:   </label>
+    <div class="row p-1">
+        <div class="col-lg-2 form-group">
+            <label style="font-size:8px;" for="date">Transaction Date:</label>
             <input style="font-size:10px;" type="date" id="date" name="date">
         </div>
-  
     </div>
-    <div class="row">
-        <div class="col-sm-3">
-            <form class="form-inline">
-                <div class="form-group">
-                    <label style="font-size:10px;" for="fromLocationsDropdown" class="d-inline">From Location:</label>  
-                    <select style="font-size:10px;" class="form-control" id="fromLocationsDropdown" name="fromLocationsDropdown"></select> 
-                </div>
-             </form>
+    <div class="row p-1">
+        <div class="col-lg-2 form-group">
+             <select style="font-size:10px;" class="form-control" id="fromLocationsDropdown" name="fromLocationsDropdown"></select>   
         </div>
-        <div class="col-sm-3">
-            <form class="form-inline">
-                <div class="form-group">
-                    <label style="font-size:10px;" for="toLocationsDropdown" class="d-inline">To Location:</label>  
+             <div class="col-lg-1"></div>
+        <div class="col-lg-2 form-group">
                     <select style="font-size:10px;" class="form-control" id="toLocationsDropdown" name="toLocationsDropdown"></select> 
-                </div>
-             </form>
-        </div>
+             </div>
     </div>
-    <div class="row">
-        <div class="col-sm-5">
-            <input style="font-size:10px; border-radius: 0 !important" type="text" class="form-control" placeholder="Notes:" aria-label="Notes:" aria-describedby="basic-addon2" id="comments"/>
+    <div class="row p-1">
+        <div class="col-lg-5 form-group">
+            <input style="font-size:10px;" type="text" class="form-control" placeholder="Notes:" aria-label="Notes:" aria-describedby="basic-addon2" id="comments"/>
         </div>
-        <div class="col-sm-1"></div> 
-        <div class="col-sm-2">
+        <div class="col-lg-4"></div> 
+        <div class="col-lg-2">
             <input style="font-size:10px; border-radius: 0 !important" type="text" class="form-control" placeholder="SA Code:" aria-label="SA Code:" aria-describedby="basic-addon2" id="saCode" readonly/>
         </div>
-        <div class="col-sm-1"></div> 
-        <div class="col-sm-1 text-right">
+        <div class="col-lg-1 text-right">
             <button class="btn btn-outline-secondary" style="font-size:10px;" id="save" type="button">Save</button>  
         </div>
     </div>
@@ -174,12 +163,25 @@
            url: "SaInternalTransfer/CreateLocationList",  
            data: "{}",  
            success: function (data) {  
-               var s = '<option value="-1">Select a Location</option>';  
+               var s = '<option value="-1">Select a From Location</option>';  
                for (var i = 0; i < data.length; i++) {  
                    s += '<option value="' + data[i].value + '">' + data[i].text + '</option>';  
                }  
-               $("#toLocationsDropdown").html(s);  
                $("#fromLocationsDropdown").html(s);  
+           }  
+       });  
+   });
+                  $(document).ready(function () {  
+       $.ajax({  
+           type: "GET",  
+           url: "SaInternalTransfer/CreateLocationList",  
+           data: "{}",  
+           success: function (data) {  
+               var s = '<option value="-1">Select a To Location</option>';  
+               for (var i = 0; i < data.length; i++) {  
+                   s += '<option value="' + data[i].value + '">' + data[i].text + '</option>';  
+               }  
+               $("#toLocationsDropdown").html(s);   
            }  
        });  
    });
