--- a/Views/SaOutbound/Index.cshtml
+++ b/Views/SaOutbound/Index.cshtml
@@ -6,58 +6,44 @@
 }
 
 <div class="text-center">
-    <h1 class="display-4">Outbound Transfer</h1>
+    <h4 class="display-5">Outbound Transfer</h4>
 </div>
 <fieldset class="scheduler-border"  style="max-height: 18rem;">
     <div class="container-flow">
-        <div class="row">
-            <div class="col-sm-3">
-                <label style="font-size:10px;" for="date">Transaction Date:</label>
+        <div class="row p-1">
+            <div class="col-lg-2 form-group">
+                <label style="font-size:8px;" for="date">Transaction Date:</label>
                 <input style="font-size:10px;" type="date" id="date" name="date">
             </div>
-            <div class="col-sm-1"></div>
-  
         </div>
-        <div class="row">
-            <div class="col-sm-3">
-                <form class="form-inline">
-                    <div class="form-group">
-                        <label style="font-size:10px;" for="truckingComp" class="d-inline">Trucking Company:</label>  
-                        <select style="font-size:10px;" class="form-control" id="truckingComp" name="truckingComp"></select>
-                    </div>
-                 </form>
+        <div class="row p-1">
+            <div class="col-lg-2 form-group">
+                 <select style="font-size:10px;" class="form-control" id="destDropdown" name="destDropdown"></select> 
             </div>
-            <div class="col-sm-3">
-                <form class="form-inline">
-                    <div class="form-group">
-                        <label style="font-size:10px;" for="destDropdown" class="d-inline">Destination:</label>  
-                        <select style="font-size:10px;" class="form-control" id="destDropdown" name="destDropdown"></select> 
-                    </div>
-                 </form>
+            <div class="col-lg-1"></div>
+            <div class="col-lg-2 form-group">
+                 <select style="font-size:10px;" class="form-control" id="fromLocationsDropdown" name="fromLocationsDropdown"></select> 
             </div>
+            <div class="col-lg-1"></div>
+            <div class="col-lg-2 form-group p-lg-0">
+                 <select style="font-size:10px;" class="form-control" id="truckingComp" name="truckingComp"></select>
+            </div>
+            <div class="col-lg-1"></div>
+            
         </div>
-        <div class="row">
-            <div class="col-sm-3">
-                <input style="font-size:10px; border-radius: 0 !important" type="text" class="form-control" placeholder="ProbillNo:" aria-label="Probill Number:" aria-describedby="basic-addon2" id="probill"/>
+        <div class="row p-1">
+            <div class="col-lg-5">
+                <input style="font-size:10px;" type="text" class="form-control" placeholder="Notes:" aria-label="Notes:" aria-describedby="basic-addon2" id="comments"/>
             </div>
-            <div class="col-sm-5">
-                <form class="form-inline">
-                    <div class="form-group">
-                        <label style="font-size:10px;" for="fromLocationsDropdown" class="d-inline">From Location:</label>  
-                        <select style="font-size:10px;" class="form-control" id="fromLocationsDropdown" name="fromLocationsDropdown"></select> 
-                    </div>
-                 </form>
+            <div class="col-lg-1"></div>
+            <div class="col-lg-2 form-group p-lg-0">
+                 <input style="font-size:10px;" type="text" class="form-control" placeholder="ProbillNo:" aria-label="Probill Number:" aria-describedby="basic-addon2" id="probill"/>
             </div>
-        </div>
-        <div class="row">
-            <div class="col-sm-6">
-                <input style="font-size:10px; border-radius: 0 !important" type="text" class="form-control" placeholder="Notes:" aria-label="Notes:" aria-describedby="basic-addon2" id="comments"/>
-            </div>
-            <div class="col-sm-1"></div>
-               <div class="col-sm-2">
+            <div class="col-lg-1"></div>
+               <div class="col-lg-2">
                 <input style="font-size:10px; border-radius: 0 !important" type="text" class="form-control" placeholder="SA Code:" aria-label="SA Code:" aria-describedby="basic-addon2" id="saCode" readonly/>
                </div>
-            <div class="col-sm-2 text-right">
+            <div class="col-lg-1 text-right">
                 <button class="btn btn-outline-secondary" style="font-size:10px;" id="save" type="button">Save</button>  
             </div>
         </div>
