--- a/Views/SaRelease/Index.cshtml
+++ b/Views/SaRelease/Index.cshtml
@@ -6,53 +6,49 @@
 }
 
 <div class="text-center">
-    <h1 class="display-4">Release from Bond</h1>
+    <h4 class="display-5">Release from Bond</h4>
 </div>
 <fieldset class="scheduler-border"  style="max-height: 18rem;">
 <div class="container-flow">
-    <div class="row">
-        <div class="col-sm-3">
-            <label style="font-size:10px;" for="date">Transaction Date:</label>
+    <div class="row p-1">
+        <div class="col-lg-2">
+            <label style="font-size:8px;" for="date">Transaction Date:</label>
             <input style="font-size:10px;" type="date" id="date" name="date">
         </div>
-        <div class="col-sm-1"></div>
+        <div class="col-lg-1"></div>
+        <div class="col-lg-2 form-group">
+              <select style="font-size:10px;" class="form-control" id="locationsDropdown" name="locationsDropdown"></select> 
+        </div>
   
     </div>
-    <div class="row">
-        <div class="col-sm-3">
-            <input style="font-size:10px; border-radius: 0 !important" type="text" class="form-control" placeholder="PO:" aria-label="PO:" aria-describedby="basic-addon2" id="purchaseOrder"/>
+    <div class="row p-1">
+        <div class="col-lg-3 form-group">
+            <input style="font-size:10px;" type="text" class="form-control" placeholder="PO:" aria-label="PO:" aria-describedby="basic-addon2" id="purchaseOrder"/>
          </div>
-        <div class="col-sm-3">
-            <input style="font-size:10px; border-radius: 0 !important" type="text" class="form-control" placeholder="Port of Entry:" aria-label="Port of Entry:" aria-describedby="basic-addon2" id="portEntry"/>
+        <div class="col-lg-3 form-group">
+            <input style="font-size:10px;" type="text" class="form-control" placeholder="Port of Entry:" aria-label="Port of Entry:" aria-describedby="basic-addon2" id="portEntry"/>
         </div>
-        <div class="col-sm-5">
-            <form class="form-inline">
-                <div class="form-group">
-                    <label style="font-size:10px;" for="locationsDropdown" class="d-inline">Locations:</label>  
-                    <select style="font-size:10px;" class="form-control" id="locationsDropdown" name="locationsDropdown"></select> 
-                </div>
-             </form>
+        
+
+    </div>
+    <div class="row p-1">
+        <div class="col-lg-3 form-group">
+            <input style="font-size:10px;" type="text" class="form-control" placeholder="Prev Trans #:" aria-label="Prev Trans #:" aria-describedby="basic-addon2" id="prevTransNo"/>
+        </div>
+        <div class="col-lg-3 form-group">
+            <input style="font-size:10px;" type="text" class="form-control" placeholder="Trans #:" aria-label="Trans #:" aria-describedby="basic-addon2" id="transNumber"/>
         </div>
 
     </div>
-    <div class="row">
-        <div class="col-sm-3">
-            <input style="font-size:10px; border-radius: 0 !important" type="text" class="form-control" placeholder="Prev Trans #:" aria-label="Prev Trans #:" aria-describedby="basic-addon2" id="prevTransNo"/>
+    <div class="row p-1">
+        <div class="col-lg-6 form-group">
+            <input style="font-size:10px;" type="text" class="form-control" placeholder="Notes:" aria-label="Notes:" aria-describedby="basic-addon2" id="comments"/>
         </div>
-        <div class="col-sm-3">
-            <input style="font-size:10px; border-radius: 0 !important" type="text" class="form-control" placeholder="Trans #:" aria-label="Trans #:" aria-describedby="basic-addon2" id="transNumber"/>
+        <div class="col-lg-3"></div>
+        <div class="col-lg-2 form-group">
+            <input style="font-size:10px;" type="text" class="form-control" placeholder="SA Code:" aria-label="SA Code:" aria-describedby="basic-addon2" id="saCode" readonly/>
         </div>
-
-        <div class="col-sm-2">
-            <input style="font-size:10px; border-radius: 0 !important" type="text" class="form-control" placeholder="SA Code:" aria-label="SA Code:" aria-describedby="basic-addon2" id="saCode" readonly/>
-        </div>
-    </div>
-    <div class="col-sm-1"></div>
-    <div class="row">
-        <div class="col-sm-6">
-            <input style="font-size:10px; border-radius: 0 !important" type="text" class="form-control" placeholder="Notes:" aria-label="Notes:" aria-describedby="basic-addon2" id="comments"/>
-        </div>
-        <div class="col-sm-3 text-right">
+        <div class="col-lg-1 text-right">
             <button class="btn btn-outline-secondary" style="font-size:10px;" id="save" type="button">Save</button>  
         </div>
     </div>
