--- a/Views/invAdj/Index.cshtml
+++ b/Views/invAdj/Index.cshtml
@@ -6,31 +6,29 @@
 }
 
 <div class="text-center">
-    <h2 class="display-4">Inventory Adjustment</h2>
+    <h4 class="display-5">Inventory Adjustment</h4>
 </div>
 <fieldset class="scheduler-border">
   <div class="container-flow">
-  <div class="row">
-           <div class="col-sm-3">
-          <label for="date"  style="font-size:10px;">Transaction Date:</label>
-         <input type="date" value=""  style="font-size:10px;" id='date' name="date" />
-         </div>   
+   <div class="row  p-1">
+        <div class="col-sm-3  form-group">
+           <label for="date"  style="font-size:8px;">Transaction Date:</label>
+           <input type="date" value=""  style="font-size:10px;" id='date' name="date" />
+        </div>   
            
-           <div class="col-sm-4">
-         <input type="text"  style="font-size:10px; border-radius: 0 !important" class="form-control" placeholder="Notes" id="comments" name="comments"/>
-             </div>
-             <div class="col-md-1 ">
-                 </div>
-            <div class="col-sm-2 text-sm-right">
-          <input type="text" style="font-size:10px; border-radius: 0 !important" name="input" class="form-control" placeholder="Sa Code" id="saCode" readonly/>
-           </div>
-                <div class="col-sm-1">
-                 </div>
-            <div class="col-sm-1 text-right">
-          <button class="btn btn-outline-secondary" style="font-size:10px;" id="save" type="button">Save</button>  
-            </div>        
-</div>
-</div>
+        <div class="col-sm-4">
+           <input type="text"  style="font-size:10px; border-radius: 0 !important" class="form-control" placeholder="Notes" id="comments" name="comments"/>
+        </div>
+           <div class="col-md-1 "></div>
+        <div class="col-sm-2 text-sm-right">
+           <input type="text" style="font-size:10px; border-radius: 0 !important" name="input" class="form-control" placeholder="Sa Code" id="saCode" readonly/>
+        </div>
+           <div class="col-sm-1"></div>
+        <div class="col-sm-1 text-right">
+           <button class="btn btn-outline-secondary" style="font-size:10px;" id="save" type="button">Save</button>  
+        </div>        
+   </div>
+  </div>
 </fieldset>
 
 <table id="invAdj" style="align: center"></table>
