--- a/Views/invAdj/Index.cshtml
+++ b/Views/invAdj/Index.cshtml
@@ -11,20 +11,20 @@
 <fieldset class="scheduler-border">
   <div class="container-flow">
    <div class="row  p-1">
-        <div class="col-sm-3  form-group">
+        <div class="col-lg-3  form-group">
            <label for="date"  style="font-size:8px;">Transaction Date:</label>
            <input type="date" value=""  style="font-size:10px;" id='date' name="date" />
         </div>   
            
-        <div class="col-sm-4">
+        <div class="col-lg-4">
            <input type="text"  style="font-size:10px; border-radius: 0 !important" class="form-control" placeholder="Notes" id="comments" name="comments"/>
         </div>
-           <div class="col-md-1 "></div>
-        <div class="col-sm-2 text-sm-right">
+           <div class="col-lg-1 "></div>
+        <div class="col-lg-2 text-sm-right">
            <input type="text" style="font-size:10px; border-radius: 0 !important" name="input" class="form-control" placeholder="Sa Code" id="saCode" readonly/>
         </div>
-           <div class="col-sm-1"></div>
-        <div class="col-sm-1 text-right">
+           <div class="col-lg-1"></div>
+        <div class="col-lg-1 text-right">
            <button class="btn btn-outline-secondary" style="font-size:10px;" id="save" type="button">Save</button>  
         </div>        
    </div>
