--- a/Views/CustomerOrder/Index.cshtml
+++ b/Views/CustomerOrder/Index.cshtml
@@ -11,72 +11,55 @@
 <fieldset class="scheduler-border">
   <div class="container-flow">
 
-     <div class="row">
+     <div class="row p-1">
 
-             <div class="col-sm-3">
-               <label for="dateOrdered"  style="font-size:10px;">Date Ordered:</label>
+             <div class="col-lg-3">
+               <label for="dateOrdered"  style="font-size:8px;">Date Ordered:</label>
                <input type="date" value="" style="font-size:10px;" id='dateOrdered' name="dateOrdered" />
              </div>
+
+             <div class="col-lg-3 form-group">
+                <select style="font-size:10px;" class="form-control" id="customer" name="customer"></select>
+             </div>
             
-             <div class="col-sm-3">
-                <input type="text"  style="font-size:10px; border-radius: 0 !important" class="form-control" placeholder="Order Number:" id="orderNumber" name="orderNmber"/>
+             <div class="col-lg-3">
+                <input type="text"  style="font-size:10px;" class="form-control" placeholder="Order Number:" id="orderNumber" name="orderNmber"/>
              </div>
-
-             <div class="col-sm-3">
-                <form class="form-inline">
-                    <div class="form-group">
-                        <label style="font-size:10px;" for="customer" class="d-inline">Customer:</label>  
-                        <select style="font-size:10px;" class="form-control" id="customer" name="customer"></select>
-                    </div>
-                 </form>
-             </div>
-
 
      </div>
 
-     <div class="row">
+     <div class="row p-1">
 
-            <div class="col-sm-3">
-               <label for="deliveryReqDate"  style="font-size:10px;">Delivery Req Date:</label>
+            <div class="col-lg-3">
+               <label for="deliveryReqDate"  style="font-size:8px;">Delivery Req Date:</label>
                <input type="date" value=""  style="font-size:10px;" id='deliveryReqDate' name="deliveryReqDate" />
             </div>
             
-             <div class="col-sm-3">
-                <input type="text"  style="font-size:10px; border-radius: 0 !important" class="form-control" placeholder="Special Instructions:" id="specialInstructions" name="specialInstructions"/>
-             </div>
-
-            <div class="col-sm-3">
-                <form class="form-inline">
-                    <div class="form-group">
-                        <label style="font-size:10px;" for="carrier" class="d-inline">Carrier:</label>  
-                        <select style="font-size:10px;" class="form-control" id="carrier" name="carrier"></select>
-                    </div>
-                 </form>
+            <div class="col-lg-3 form-group">
+               <select style="font-size:10px;" class="form-control" id="carrier" name="carrier"></select>
             </div>
 
-
+             <div class="col-lg-3">
+                <input type="text"  style="font-size:10px;" class="form-control" placeholder="Special Instructions:" id="specialInstructions" name="specialInstructions"/>
+             </div>
      </div>
-          <div class="row">
+          <div class="row p-1">
 
-             <div class="col-sm-3">
-                <input type="text"  style="font-size:10px; border-radius: 0 !important" class="form-control" placeholder="Driver:" id="driver" name="driver"/>
+              <div class="col-lg-3 form-group">  
+                 <select style="font-size:10px;" class="form-control" id="customerOrderStatus" name="customerOrderStatus"></select>
+             </div>
+
+             <div class="col-lg-3">
+                <input type="text"  style="font-size:10px;" class="form-control" placeholder="Driver:" id="driver" name="driver"/>
              </div>
             
-             <div class="col-sm-3">
-                <input type="text"  style="font-size:10px; border-radius: 0 !important" class="form-control" placeholder="Ds Slip Number:" id="dsSlipNumber" name="dsSlipNumber"/>
+             <div class="col-lg-3">
+                <input type="text"  style="font-size:10px;" class="form-control" placeholder="Ds Slip Number:" id="dsSlipNumber" name="dsSlipNumber"/>
              </div>
 
-             <div class="col-sm-3">
-                <form class="form-inline">
-                    <div class="form-group">
-                        <label style="font-size:10px;" for="customerOrderStatus" class="d-inline">Customer Order Status:</label>  
-                        <select style="font-size:10px;" class="form-control" id="customerOrderStatus" name="customerOrderStatus"></select>
-                    </div>
-                 </form>
-             </div>
+             <div class="col-lg-2"></div>
 
-             <div class="col-sm-2"></div>
-             <div class="col-sm-1 text-right">
+             <div class="col-lg-1 text-right">
                 <button class="btn btn-outline-secondary" style="font-size:10px;" id="save" type="button">Save</button>  
              </div>   
 
