-fixing summary dirrectory

--- a/Views/CustomerOrder/Index.cshtml
+++ b/Views/CustomerOrder/Index.cshtml
@@ -67,7 +67,7 @@
 </div>
 </fieldset>
 
-<table id="customerOrder" style="align: center"></table>
+<table id="customerOrder"></table>
 <div id="jqGridPager"></div>
 @section scripts {
 
