--- a/Views/CustomerSummary/Index.cshtml
+++ b/Views/CustomerSummary/Index.cshtml
@@ -32,7 +32,7 @@
 </div>
 </fieldset>
 
-<table id="customerSummary" style="align: center"></table>
+<table id="customerSummary"></table>
 <div id="jqGridPager"></div>
 @section scripts {
 
