--- a/Views/Customers/Index.cshtml
+++ b/Views/Customers/Index.cshtml
@@ -22,7 +22,7 @@
     </div>
 </fieldset>
 
-<table id="customers" style="align: center"></table>
+<table id="customers"></table>
 <div id="jqGridPager"></div>
 
 @section scripts {
