--- a/Views/FulfillSales/Index.cshtml
+++ b/Views/FulfillSales/Index.cshtml
@@ -66,14 +66,14 @@
    
 </fieldset>
 
-<table id="FulfillSalesHdr" style="align: center"></table>
+<table id="FulfillSalesHdr"></table>
 <div id="jqGridPager"></div>
 
 <div class="text-center">
     <h1 class="display-8">Details</h1>
 </div>
 
-<table id="FulfillSalesDtls" style="align: center"></table>
+<table id="FulfillSalesDtls"></table>
 <div id="jqGridPager2"></div>
 
 @section scripts {
