--- a/Views/Products/Edit.cshtml
+++ b/Views/Products/Edit.cshtml
@@ -63,7 +63,7 @@
                 <input asp-for="HlCase" class="form-control" />
                 <span asp-validation-for="HlCase" class="text-danger"></span>
             </div>
-            <div class="form-group">
+@*            @*<div class="form-group">
                 <label asp-for="InsertUserId" class="control-label"></label>
                 <input asp-for="InsertUserId" class="form-control" />
                 <span asp-validation-for="InsertUserId" class="text-danger"></span>
@@ -82,7 +82,7 @@
                 <label asp-for="UpdateTimestamp" class="control-label"></label>
                 <input asp-for="UpdateTimestamp" class="form-control" />
                 <span asp-validation-for="UpdateTimestamp" class="text-danger"></span>
-            </div>
+            </div>*@
             <div class="form-group">
                 <input type="submit" value="Save" class="btn btn-primary" />
             </div>
