--- a/Views/Products/Index.cshtml
+++ b/Views/Products/Index.cshtml
@@ -22,7 +22,7 @@
     </div>
 </fieldset>
 
-<table id="product" style="align: center"></table>
+<table id="product"></table>
 <div id="jqGridPager"></div>
 
 @section scripts {
