--- a/Views/SaDamageRecoup/Index.cshtml
+++ b/Views/SaDamageRecoup/Index.cshtml
@@ -30,7 +30,7 @@
   </div>
 </fieldset>
 
-<table id="saDamageRecoup" style="align: center"></table>
+<table id="saDamageRecoup"></table>
 <div id="jqGridPager"></div>
 @section scripts {
 
