--- a/Views/SaExciseDuty/Index.cshtml
+++ b/Views/SaExciseDuty/Index.cshtml
@@ -35,7 +35,7 @@
 </fieldset>
 
 
-<table id="SaExciseDuty" style="align: center"></table>
+<table id="SaExciseDuty"></table>
 <div id="jqGridPager"></div>
 @section scripts {
 
