--- a/Views/SaInternalTransfer/Index.cshtml
+++ b/Views/SaInternalTransfer/Index.cshtml
@@ -41,7 +41,7 @@
 </fieldset>
 
 
-<table id="saInternalTransfer" style="align: center"></table>
+<table id="saInternalTransfer"></table>
 <div id="jqGridPager"></div>
 @section scripts {
 
