--- a/Views/SaOutbound/Index.cshtml
+++ b/Views/SaOutbound/Index.cshtml
@@ -51,7 +51,7 @@
 </fieldset>
 
 
-<table id="saOutbound" style="align: center"></table>
+<table id="saOutbound"></table>
 <div id="jqGridPager"></div>
 @section scripts {
 
