--- a/Views/SaRelease/Index.cshtml
+++ b/Views/SaRelease/Index.cshtml
@@ -56,7 +56,7 @@
 </fieldset>
 
 
-<table id="saRelease" style="align: center"></table>
+<table id="saRelease"></table>
 <div id="jqGridPager"></div>
 @section scripts {
 
