--- a/Views/SaStockReceived/Index.cshtml
+++ b/Views/SaStockReceived/Index.cshtml
@@ -61,7 +61,7 @@
     </div>
 </fieldset>
 
-<table id="saStockReceived" style="align: center"></table>
+<table id="saStockReceived"></table>
 <div id="jqGridPager"></div>
 
 @section scripts {
