--- a/Views/Supplier/Index.cshtml
+++ b/Views/Supplier/Index.cshtml
@@ -22,7 +22,7 @@
  </div>
 </fieldset>
 
-<table id="supplier" style="align: center"></table>
+<table id="supplier"></table>
 <div id="jqGridPager"></div>
 
 @section scripts {
