--- a/Views/Products/Delete.cshtml
+++ b/Views/Products/Delete.cshtml
@@ -65,7 +65,7 @@
         <dd class = "col-sm-10">
             @Html.DisplayFor(model => model.HlCase)
         </dd>
-        <dt class = "col-sm-2">
+@*        <dt class = "col-sm-2">
             @Html.DisplayNameFor(model => model.InsertUserId)
         </dt>
         <dd class = "col-sm-10">
@@ -88,7 +88,7 @@
         </dt>
         <dd class = "col-sm-10">
             @Html.DisplayFor(model => model.UpdateTimestamp)
-        </dd>
+        </dd>*@
         <dt class = "col-sm-2">
             @Html.DisplayNameFor(model => model.Supplier)
         </dt>
