--- a/Views/Products/Details.cshtml
+++ b/Views/Products/Details.cshtml
@@ -64,7 +64,7 @@
         <dd class = "col-sm-10">
             @Html.DisplayFor(model => model.HlCase)
         </dd>
-        <dt class = "col-sm-2">
+@*        <dt class = "col-sm-2">
             @Html.DisplayNameFor(model => model.InsertUserId)
         </dt>
         <dd class = "col-sm-10">
@@ -87,7 +87,7 @@
         </dt>
         <dd class = "col-sm-10">
             @Html.DisplayFor(model => model.UpdateTimestamp)
-        </dd>
+        </dd>*@
         <dt class = "col-sm-2">
             @Html.DisplayNameFor(model => model.Supplier)
         </dt>
